welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:1: error: '(' expected but identifier found.
while !estSurBiscuit(){
      ^BaggleSeeker:6: error: illegal start of simple expression
	}
        ^